--- a/build.gradle
+++ b/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     testCompile('org.junit.jupiter:junit-jupiter-params:5.0.0')
     testRuntime('org.junit.jupiter:junit-jupiter-engine:5.0.0')
     runtime("com.h2database:h2:1.4.199")
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
 }
